Changed Name Again

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Your Name</h1>
+            <h1>Brandon Torio</h1>
             <h3>Catchy snippit about yourself.</h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
