--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1>Brandon Torio</h1>
-            <h3>Catchy snippit about yourself.</h3>
+            <h3>y u do dis</h3>
             <br>
-            <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
+            <a href="#about" class="btn btn-dark btn-lg">pls</a>
         </div>
     </header>
 
@@ -66,8 +66,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Maybe a little information about yourself?</h2>
-                    <p class="lead">Even more information about yourself.</p>
+                    <h2>ok</h2>
                 </div>
             </div>
             <!-- /.row -->
@@ -91,9 +90,7 @@
                                 <i class="fa fa-cloud fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Skill Name</strong>
-                                </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                    <strong>pls</strong></h4>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -103,33 +100,17 @@
                                 <i class="fa fa-compass fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Skill Name</strong>
-                                </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                    <strong>no</strong></h4>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Skill Name</strong>
-                                </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <span class="fa-stack fa-4x"><strong>no</strong></span>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Skill Name</strong>
-                                </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <span class="fa-stack fa-4x"><strong>no</strong></span>
                             </div>
                         </div>
                     </div>
@@ -146,44 +127,7 @@
     <section id="portfolio" class="portfolio">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>My Work</h2>
-                    <hr class="small">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
-                                </a>
-                                Description of this thing that you worked on. Description of this thing that you worked on. Description of this thing that you worked on. Description of this thing that you worked on.
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
-                                </a>
-                                Description of this thing that you worked on. Description of this thing that you worked on. Description of this thing that you worked on. Description of this thing that you worked on.
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
-                                </a>
-                                Description of this thing that you worked on. Description of this thing that you worked on. Description of this thing that you worked on. Description of this thing that you worked on.
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
-                                </a>
-                                Description of this thing that you worked on. Description of this thing that you worked on. Description of this thing that you worked on. Description of this thing that you worked on.
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <div class="col-lg-10 col-lg-offset-1 text-center">no</div>
                 <!-- /.col-lg-10 -->
             </div>
             <!-- /.row -->
@@ -199,8 +143,9 @@
                     <h4><strong>Contact</strong>
                     </h4>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:name@example.com">name@example.com</a>
+                      trung tran
+                      <li></li>
+                        <li><i class="fa fa-envelope-o fa-fw">https://www.facebook.com/Triple.T.Fantastic?fref=ts</i><a href="mailto:name@example.com"></a>
                         </li>
                     </ul>
                     <br>
